--- a/src/styles/modules/_block-home-featured-video.styl
+++ b/src/styles/modules/_block-home-featured-video.styl
@@ -1,5 +1,5 @@
 #block--featured-video
-  background-color $module-video-feature-background-color
+  // background-color $module-video-feature-background-color
   position relative
   height 0
   padding-bottom percentage(15/16)
