--- a/templates/structure/news-events/_type.twig
+++ b/templates/structure/news-events/_type.twig
@@ -20,6 +20,21 @@
   {% exit 404 %}
 {% endif %}
 
+{% if category is defined %}
+  {% set storyTypeSlug = category %}
+  {% set storyType = null %}
+  {% set storyTypeCats = craft.categories.group('storyType').all() %}
+  {% for _storyType in storyTypeCats %}
+    {% if _storyType.slug == storyTypeSlug %}
+      {% set storyType = _storyType %}
+    {% endif %}
+  {% endfor %}
+
+  {% if not storyType %}
+    {% exit 404 %}
+  {% endif %}
+{% endif %}
+
 {% set title = entryType.name %}
 
 {% set yearFilter = craft.app.request.getParam('year') %}
@@ -38,10 +53,34 @@
   {% set firstDayOfMonth = now | date_modify('first day of ' ~ firstMonthQuery ~ ' ' ~ yearFilter)|date('Y-m-d') %}
   {% set lastDayOfMonth = now | date_modify('last day of ' ~ lastMonthQuery ~ ' ' ~ yearFilter)|date('Y-m-d') %}
 
+  {% if category is defined %}
+    {% set queryParams = {
+      'section': 'newsEvents',
+      'type': 'and, ' ~ type,
+      'postDate': 'and, >= ' ~ firstDayOfMonth ~ ', <= ' ~ lastDayOfMonth,
+      'relatedTo': {
+        'targetElement': storyType,
+        'field': 'storyType'
+      }
+    } %}
+  {% else %}
+    {% set queryParams = {
+      'section': 'newsEvents',
+      'type': 'and, ' ~ type,
+      'postDate': 'and, >= ' ~ firstDayOfMonth ~ ', <= ' ~ lastDayOfMonth
+    } %}
+  {% endif %}
+  
+{%- elseif (yearFilter is null or yearFilter == 'Year') and category is defined -%}
+
+  {# Only Story Type Category #}
   {% set queryParams = {
     'section': 'newsEvents',
     'type': 'and, ' ~ type,
-    'postDate': 'and, >= ' ~ firstDayOfMonth ~ ', <= ' ~ lastDayOfMonth
+    'relatedTo': {
+      'targetElement': storyType,
+      'field': 'storyType'
+    }
   } %}
 
 {%- else -%}
@@ -59,7 +98,7 @@
 
   <header id="news-events--intro">
     <div id="news-events--intro-text">
-      <h1>{{ entryType.name | pluralize }}</h1>
+      <h1>{{ entryType.name | pluralize }}{% if category is defined %} - {{ storyType.title }}{% endif %}</h1>
       {# {%- if entry.headline -%}<h2>{{ entry.headline }}</h2>{%- endif -%} #}
       {# {%- if entry.leadIn -%}<p>{{ entry.leadIn }}</p>{%- endif -%} #}
     </div>
