--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -774,7 +774,7 @@ $about-page-mayor-section-intro-color = $light-blue
 
 $about-page-mayor-section-headline-size-mobile = rem(32px)
 $about-page-mayor-section-headline-size-desktop = rem(36px)
-$about-page-mayor-section-headline-font = $sans-serif-headline
+$about-page-mayor-section-headline-font = $sans-serif
 $about-page-mayor-section-headline-transform = none
 $about-page-mayor-section-headline-color = $navy
 
