--- a/src/styles/site/_404.styl
+++ b/src/styles/site/_404.styl
@@ -4,39 +4,48 @@
   display flex
   height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
   justify-content center
-  overflow-x hidden
-  overflow-y auto
-  perspective 1px
   position relative
   text-align center
-  transform-style preserve-3d
   width 100vw
+  +above(m)
+    overflow-x hidden
+    overflow-y auto
+    perspective 1px
+    transform-style preserve-3d
 
   .shapes
-    background $medium-blue embedurl("../images/404-shape.svg", "utf8") no-repeat right center
-    background-size 100% auto
+    background $medium-blue embedurl("../images/404-shape.svg", "utf8") no-repeat center center
+    background-size auto 115%
     position absolute
     top 0
     right 0
     bottom 0
     left 0
-    transform translateZ(-1px) scale(3)
+    z-index 0
+    +above(m)
+      background-size 100% auto
+      transform translateZ(-1px) scale(3)
 
+  
   #four-oh-four--content
-    transform translateZ(0)
+    z-index 1
+    +above(m)
+      transform translateZ(0)
 
   h1
-      color $white
-      font-family $sans-serif-headline
+    color $white
+    font-family $sans-serif-headline
+    font-size rem(148px)
+    font-weight 700
+    margin 0
+    +above(m)
       font-size rem(210px)
-      font-weight 700
-      margin 0
-    
-    h4
-      color $white
-      font-family $sans-serif
-      font-size rem(18px)
-      font-weight 400
-    
-    a
-      button($button-background, $button-hover-background, $button-text-color, $button-text-color, $button-font-size, $button-line-height, $button-padding, uppercase, center)
+  
+  h4
+    color $white
+    font-family $sans-serif
+    font-size rem(18px)
+    font-weight 400
+  
+  a
+    button($button-background, $button-hover-background, $button-text-color, $button-text-color, $button-font-size, $button-line-height, $button-padding, uppercase, center)
