don't display bullets on contact section

--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -69,7 +69,10 @@
     margin-top 0
     +above(m)
       font-size $module-person-contact-person-title-size-desktop
-  
+  > ul
+    list-style none
+    padding 0
+    
   .block--staff-member a
     
     &:after
