--- a/src/styles/inc/_media.styl
+++ b/src/styles/inc/_media.styl
@@ -43,3 +43,26 @@ img[data-sizes="auto"]
 
   &.instagram
     padding-bottom: 120%
+
+figure.no-image
+  position relative
+  img
+    z-index 0
+  &:before
+    content ''
+    position absolute
+    top 0
+    left 0
+    bottom 0
+    right 0
+    background embedurl("../images/logo-mark-repeating.svg", "utf8") repeat
+    background-size 30%
+    transition transform 0.8s ease
+    z-index 1
+
+.block--subpage
+.block--spotlight
+.block--news-events--preview
+  a:hover
+    figure.no-image:before
+      transform scale(1.08)
