--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -12,6 +12,25 @@
     text-decoration $module-subpages-link-decoration
     transition: box-shadow $transition-timing
 
+    > figure
+      margin 0
+      line-height 0
+      overflow hidden
+
+      img
+        transition filter 400ms, transform 0.8s ease
+
+      &.desktop
+        display none
+        visibility hidden
+      +above(m)
+        &.mobile
+          display none
+          visibility none
+        &.desktop
+          display block
+          visibility visible
+
   h3
     color $module-subpages-link-color
     font-family $module-subpages-link-font
@@ -40,4 +59,7 @@
       color $module-subpages-link-hover-color
       &:after
         margin-left: 0.35em
+    figure img
+      transform scale(1.08)
+
 
