--- a/templates/structure/staff/_entry.twig
+++ b/templates/structure/staff/_entry.twig
@@ -17,14 +17,19 @@
 {% cache %}
 <section id="staff-profile" itemscope itemtype="http://schema.org/Person">
   {% if entry.staffPhoto | length %}
-    <picture itemprop="image">
-      <sources data-srcset="{{ entry.staffPhoto.one().optimizedImagesSquare.srcsetWebP() }}"
-               data-sizes="50vw"
-               type="image/webp" />
-      <img class="lazyload" src="{{ entry.staffPhoto.one().optimizedImagesSquare.placeholderBox() }}"
-           data-srcset="{{ entry.staffPhoto.one().optimizedImagesSquare.srcset() }}"
-           data-sizes="50vw" alt="{{ fullName }}" />
-    </picture>
+    {%- import "macros/_images" as imageFunctions -%}
+    {%- set image = entry.staffPhoto.one() -%}
+    <figure itemprop="image">
+      {{ imageFunctions.responsivePicture(image.optimizedImagesSquare, image.alt) }}
+      {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
+    </figure>
+  {% else %}
+    <figure class="mobile no-image">
+      <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+    </figure>
+    <figure class="desktop no-image">
+      <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+    </figure>
   {% endif %}
 
   <h1 itemprop="name" class="fn">{{ fullName | typogrify }}</h1>
