--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -61,7 +61,7 @@
       font-family $module-person-title-font
       font-size $module-person-title-size-mobile
       font-style $module-person-title-style
-      line-height 1
+      line-height $line-height-title
       margin 0
       +above(m)
         font-size $module-person-title-size-desktop
