--- a/src/styles/site/_news-events-landing.styl
+++ b/src/styles/site/_news-events-landing.styl
@@ -178,6 +178,7 @@
             width 70%
           li
             flex-grow: 1
+            min-width rem(180px)
 
       li
         display block
