--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -169,7 +169,7 @@
         width 50%
 
       +above(m)
-        display inline-block
+        // display inline-block
         font-size $directory-department-title-controls-size-desktop
         margin 0
         max-height initial
