--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -119,7 +119,7 @@
         &:after
           transform translateX(0.35em)
     
-    > picture
+    > figure
       +above(m)
         max-width $module-person-contact-image-size-desktop
         margin 0
