header tweaks for specific sections
issue #101

--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -86,6 +86,13 @@
         content: ''
         z-index 1
 
+.page-section--departments
+.page-section--boards
+.page-section--departmentsContent
+  #header-image
+    background-color $black
+    figure
+      opacity .8
 
 +above(m)
   .page-section--newsEvents
