--- a/templates/modules/content/_header-block.twig
+++ b/templates/modules/content/_header-block.twig
@@ -17,6 +17,13 @@
       {{ imageFunctions.responsivePicture(image.optimizedImagesPageHeader, image.alt) }}
       {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
     </figure>
+    
+  {% elseif ((entry.section | lower) == 'boards') or ((entry.section | lower) == 'departments') or ((entry.section | lower) == 'departmentsContent') %}
+
+    <figure>
+      {{ imageFunctions.responsivePicture(image.optimizedImagesPageHeader, image.alt) }}
+      {% if image.caption %}<figcaption>{{ image.caption }}</figcaption>{% endif %}
+    </figure>
 
   {% else %}
 
