--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -23,6 +23,8 @@
     +above(m)
       font-size $header-block-title-size-desktop
       transform 'translate(%s, calc(%s - %s))' % (0 -50% rem(((53.5+33)/2)px))
+      padding-left 'calc(%s + %s)' % (rem(30px) 5%)
+      padding-right 'calc(%s + %s)' % (rem(30px) 5%)
 
   figure
     line-height 0
