--- a/src/styles/site/_news-events-landing.styl
+++ b/src/styles/site/_news-events-landing.styl
@@ -209,23 +209,25 @@
 
     figure
       position relative
-      &::after
-        display: block
-        position: absolute
-        background-image: linear-gradient(to bottom, transparent 0%, rgba($black, .6) 100%)
-        top 0
-        right 0
-        left 0
-        bottom 0
-        content: ''
+      +above(m)
+        &::after
+          display: block
+          position: absolute
+          background-image: linear-gradient(to bottom, transparent 0%, rgba($black, .6) 100%)
+          top 0
+          right 0
+          left 0
+          bottom 0
+          content: ''
 
     .block--news-events--featured-title
-      position absolute
-      left 0
-      right 0
-      bottom rem(30px)
+      padding rem(30px) 0 rem(28px)
       +above(m)
+        position absolute
+        left 0
+        right 0
         bottom rem(72px)
+        padding 0
 
 
       h2
@@ -237,9 +239,9 @@
           padding-right: 'calc(%s * (-%s/%s * -%s) - (%s - %s * (-%s/%s * -%s)) + %s)' % (100vw 2 36 1 30px 30px 2 36 1 30px)
 
       h2
-        color $white
         font-size $module-news-events-featured-preview-title-size-mobile
         +above(m)
+          color $white
           font-size $module-news-events-featured-preview-title-size-desktop
 
         > span
@@ -247,11 +249,11 @@
           color $module-news-events-featured-preview-title-button-color
           display inline-block
           font-size $module-news-events-featured-preview-title-button-size-mobile
-          margin-left 1rem
           padding .4em .8em
           text-transform $module-news-events-featured-preview-title-button-transform
           vertical-align middle
           +above(m)
+            margin-left 1rem
             font-size $module-news-events-featured-preview-title-button-size-desktop
 
       h3
