--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -29,6 +29,14 @@
   {% do view.registerJsFile('/assets/js/site.combined.min.js') %}
 {% else %}
   {% do view.registerJsFile(craft.stamp.er('/assets/js/site.combined.min.js')) %}
+  {% do view.registerJsFile('https://www.googletagmanager.com/gtag/js?id=UA-111364147-1') %}
+  {% js %}
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-111364147-1');
+  {% endjs %}
+
 {% endif %}
 
 {# {% do view.registerJsFile('https://speedfont.com/api?key=HueyefKgmbJc') %} #}
