--- a/templates/structure/pages/_types/_standard.twig
+++ b/templates/structure/pages/_types/_standard.twig
@@ -6,5 +6,6 @@
 
 {% include "modules/content/_page-content" %}
 {% include "modules/content/_page-content-attachments" %}
-{% include 'modules/content/_block-contact-person.twig' %}
+{% include 'modules/content/_block-contact-person' %}
+{% if entry.embedForm | length %}{% include "modules/content/_form" %}{% endif %}
 {% endcache %}
