--- a/templates/singles/contact/index.twig
+++ b/templates/singles/contact/index.twig
@@ -159,71 +159,10 @@
 
 <section id="contact--info-request">
   <h1>Public Information Request</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <p>Coming soon.</p>
 </section>
 
-<section id="contact--form">
-  <div id="contact--form--content">
-
-    <h1>Submit a Question or Comment</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis turpis urna, tempor ut ornare id, condimentum et felis.</p>
-
-    <form action="#">
-      <fieldset>
-        <div class="form-group">
-          <div class="form-input">
-            <label for="first_name">First Name</label>
-            <input type="text" id="first_name" placeholder="First Name">
-          </div>
-          <div class="form-input">
-            <label for="last_name">Last Name</label>
-            <input type="text" id="last_name" placeholder="Last Name">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="form-input">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Email">
-          </div>
-          <div class="form-input">
-            <label for="phone">Phone</label>
-            <input id="phone" type="tel" name="phone" placeholder="Phone">
-          </div>
-        </div>
-        <div>
-          <label for="dropdown">Dropdown</label>
-          <select id="dropdown" data-choices>
-            <option>
-              Select Option
-            </option>
-            <option>
-              Option 02
-            </option>
-            <option>
-              Option 03
-            </option>
-            <option>
-              Option 04
-            </option>
-          </select>
-        </div>
-        <div>
-          <label for="subject">Subject</label>
-          <input type="text" id="subject" placeholder="Subject">
-        </div>
-        <div>
-          <label for="message">Message</label>
-          <textarea id="message" cols="30" rows="5" placeholder="Begin message..."></textarea>
-        </div>
-        <div class="center">
-          <input type="submit" id="submit" value="Submit">
-        </div>
-      </fieldset>
-    </form>
-
-  </div>
-</section>
-
+{% if entry.embedForm | length %}{% include "modules/content/_form" %}{% endif %}
 
 
 
