--- a/templates/structure/jobs/_entry.twig
+++ b/templates/structure/jobs/_entry.twig
@@ -17,6 +17,6 @@
     {{ entry.copy }}
     
     {% include 'modules/content/_page-content-attachments' %}
-    {% include 'modules/content/_block-contact-person.twig' %}
+    {% include 'modules/content/_block-contact-person' %}
   {% endcache %}
 {% endblock %}
