--- a/templates/structure/news-events/_types/_ announcement.twig
+++ b/templates/structure/news-events/_types/_ announcement.twig
@@ -10,4 +10,4 @@
 
 {% include "modules/content/_page-content" %}
 {% include "modules/content/_page-content-attachments" %}
-{% include 'modules/content/_block-contact-person.twig' %}
+{% include 'modules/content/_block-contact-person' %}
