--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -121,6 +121,7 @@
     
     > figure
       +above(m)
+        &
         &.desktop
           display inline-block
         width $module-person-contact-image-size-desktop
@@ -136,6 +137,8 @@
         padding-left rem(24px)
         width 'calc(%s - %s)' % (100% $module-person-contact-image-size-desktop)
         white-space initial
+        h3
+          margin-top .5em
   
   dl
     dt
