--- a/src/styles/site/_contact.styl
+++ b/src/styles/site/_contact.styl
@@ -122,6 +122,7 @@
     lost-flex-container: row
 
   #contact--form--content
+    width 100%
     h1
       font-size $contact-page-form-section-h1-size-mobile
       +above(m)
