include standard pages in image opacity change

--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -88,6 +88,7 @@
         content: ''
         z-index 1
 
+.page-type--standard
 .page-section--departments
 .page-section--boards
 .page-section--departmentsContent
