--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -990,6 +990,7 @@ $news-events-intro-text-color = $navy
 
 $news-events-filter-background = $background-gray
 $news-events-filter-label-color = $navy
+$news-events-filter-label-font = $sans-serif-headline
 $news-events-filter-label-size-mobile = rem(16px)
 $news-events-filter-label-size-desktop = rem(12.5px)
 $news-events-filter-label-transform = uppercase
