--- a/src/styles/site/_news-events-landing.styl
+++ b/src/styles/site/_news-events-landing.styl
@@ -76,6 +76,7 @@
         +above(xl)
           lost-column 4/36
         text-align right
+        font-family $news-events-filter-label-font
         font-size $news-events-filter-label-size-desktop
         display: flex
         justify-content: center
