--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -713,7 +713,8 @@ $list-intro-text-size-mobile = rem(18px)
 $list-intro-text-size-desktop = rem(18px)
 $list-intro-text-color = $navy
 
-$list-section-title-color = $navy
+$list-section-title-color = $light-blue
+$list-section-title-font = $sans-serif-headline
 $list-section-title-mobile = rem(21px)
 $list-section-title-desktop = rem(24px)
 
