--- a/src/styles/site/_layout-list.styl
+++ b/src/styles/site/_layout-list.styl
@@ -61,7 +61,9 @@
 
   > h3
     color $list-section-title-color
+    font-family $list-section-title-font
     font-size $list-section-title-mobile
+    text-transform uppercase
     +above(m)
       font-size $list-section-title-desktop
 
