--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -40,6 +40,13 @@ $newsImageRatio = percentage(1/3)
   .page-type--standard
     .parallax .parallax__layer--base
       top: 'calc(100vw * %s)' % $standardImageRatio
+  
+  .page-section--departments
+  .page-section--boards
+  .page-section--departmentsContent
+    &.page-type--standard
+      .parallax .parallax__layer--base
+        top: 'calc((%s * %s) + %s)' % (100vw $standardImageRatioDesktop $top-menu-height-desktop)
 
   .page-section--newsEvents
     .parallax .parallax__layer--base
