--- a/templates/modules/content/_form.twig
+++ b/templates/modules/content/_form.twig
@@ -26,14 +26,19 @@
         {%- if form.toEmail|length -%}
         <input type="hidden" name="toEmail" value="{{ form.toEmail|hash }}" />
         {%- endif -%}
+        {%- if form.requireEmail == 0 -%}
+        <input type="hidden" name="fromEmail" value="noreply@cityofmarion.in.gov">
+        {%- endif -%}
         <input id="swampFox" name="swampFox" type="text">
   
         <fieldset>
+          {%- if form.requireEmail -%}
           <div>
             <label for="email">Email</label>
             <input type="email" id="email" name="fromEmail" placeholder="Email" value="{{ message.fromEmail ?? '' }}" required>
             {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
           </div>
+          {%- endif -%}
 
           {# Loop through the fields Matrix #}
           {%- for field in form.formFields.all() -%}
